--- a/chats.html
+++ b/chats.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Friends - Kokoa Clone</title>
+  <title>Charset - Kokoa Clone</title>
 </head>
 
 <body>
@@ -26,67 +26,63 @@
   </div>
 
   <header class="screen-header">
-    <h1 class="screen-header__title">Friends</h1>
+    <h1 class="screen-header__title">Chats</h1>
     <div class="screen-header__icons">
       <span><i class="fas fa-search fa-lg"></i></span>
+      <span><i class="far fa-comment-dots fa-lg"></i></span>
       <span><i class="fas fa-music fa-lg"></i></span>
       <span><i class="fas fa-cog fa-lg"></i></span>
     </div>
   </header>
 
-  <a id="friends-display-link">
-    <i class="fas fa-info-circle"></i>
-    Friens' Name Display
-    <i class="fas fa-chevron-right fa-xs"></i>
-  </a>
-
-  <main class="friends-screen">
+  <main class="main-screen">
     <div class="user-component">
     <div class="user-component__column">
         <img src="https://avatars.githubusercontent.com/u/3612017?v=4"
-        class="user-component__avatar user-component__avatar--xl">
+        class="user-component__avatar user-component__avatar">
     <div class="=user-component__text">
           <h4 class="user-component__title">Nicolas</h4>
-          <!--<h6 class="user-component__subtitle">this text whatever</h6>-->
+          <h6 class="user-component__subtitle">
+            Please check My Kokoa Account Info
+          </h6>
     </div>
-    </div>
-    <div class="user-component__column"></div>
-    </div>
-    <div class="friends-screen__channel">
-    <div class="friends-screen__channel-header">
-        <span>Channel</span>
-        <i class="fas fa-chevron-up fa-xs"></i>
-    </div>
-    <div class="user-component">
-    <div class="user-component__column">
-        <img src="https://avatars.githubusercontent.com/u/3612017?v=4"
-        class="user-component__avatar user-component__avatar--sm">
-    <div class="=user-component__text">
-        <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
-    </div>
-    </div>
-    <div class="user-component__column">
-      <div>
-        <span>2</span>
-        <i class="fas fa-chevron-right fa-xs"></i>
-        </div>
-    </div>
+  </div>
+  <div class="user-component__column">
+    <span class="user-component__time">21:22</span>
+    <div class="badge">1</div>
     </div>
     </div>
   </main>
 
-    
+  <main class="main-screen__nd">
+    <div class="user-component">
+    <div class="user-component__column">
+        <img src="https://avatars.githubusercontent.com/u/3612017?v=4"
+        class="user-component__avatar user-component__avatar">
+    <div class="=user-component__text">
+          <h4 class="user-component__title">Nico</h4>
+          <h6 class="user-component__subtitle">
+            Please check My Kokoa Account Info
+          </h6>
+    </div>
+  </div>
+  <div class="user-component__column">
+    <span class="user-component__time">21:20</span>
+    <div class="badge">2</div>
+    </div>
+    </div>
+  </main>
 
    <nav class="nav">
     <ul class="nav__list">
       <li class="nav__bnt">
         <a class="nav__link" href="friends.html">
-          <i class="fas fa-user fa-2x"></i></a>
+          <i class="far fa-user fa-2x"></i></a>
       </li>
       <li class="nav__bnt">
         <a class="nav__link" href="chats.html">
           <span class="nav__notification badge">1</span>
-          <i class="far fa-comment fa-2x"></i></a>
+          <i class="fas fa-comment fa-2x"></i></a>
       </li>
       <li class="nav__bnt">
         <a class="nav__link" href="find.html">
