--- a/chats.html
+++ b/chats.html
@@ -36,6 +36,7 @@
   </header>
 
   <main class="main-screen">
+    <a href="chat.html">
     <div class="user-component">
     <div class="user-component__column">
         <img src="https://avatars.githubusercontent.com/u/3612017?v=4"
@@ -52,6 +53,7 @@
     <div class="badge">1</div>
     </div>
     </div>
+  </a>
   </main>
 
   <main class="main-screen__nd">
