--- a/more.html
+++ b/more.html
@@ -31,7 +31,7 @@
       <span><i class="fas fa-search fa-lg"></i></span>
       <span><i class="fas fa-music fa-lg"></i></span>
       <span class="point2"></span>
-      <span><a href="settings.html"><i class="fas fa-cog fa-lg"></i></span>
+      <span><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a></span>
   </header>
 
   <main class="main-screen more-screen">
